--- a/HumphreyJ.NetCore.MKHX.DataBase/HumphreyJ.NetCore.MKHX.DataBase.csproj
+++ b/HumphreyJ.NetCore.MKHX.DataBase/HumphreyJ.NetCore.MKHX.DataBase.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="AffectTypeContent.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
