--- a/HumphreyJ.NetCore.MKHX.DataBase/HumphreyJ.NetCore.MKHX.DataBase.csproj
+++ b/HumphreyJ.NetCore.MKHX.DataBase/HumphreyJ.NetCore.MKHX.DataBase.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="AffectTypeContent.cs" />
   </ItemGroup>
