--- a/HumphreyJ.NetCore.MKHX.GameData/HumphreyJ.NetCore.MKHX.GameData.csproj
+++ b/HumphreyJ.NetCore.MKHX.GameData/HumphreyJ.NetCore.MKHX.GameData.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
