--- a/HumphreyJ.NetCore.MKHX.SandBox/HumphreyJ.NetCore.MKHX.SandBox.csproj
+++ b/HumphreyJ.NetCore.MKHX.SandBox/HumphreyJ.NetCore.MKHX.SandBox.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\HumphreyJ.NetCore.MKHX.GameData\HumphreyJ.NetCore.MKHX.GameData.csproj" />
   </ItemGroup>
