--- a/HumphreyJ.NetCore.MKHX.Web/HumphreyJ.NetCore.MKHX.Web.csproj
+++ b/HumphreyJ.NetCore.MKHX.Web/HumphreyJ.NetCore.MKHX.Web.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.1.1" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
