--- a/HumphreyJ.NetCore.MKHX.GameData.Uploader/HumphreyJ.NetCore.MKHX.GameData.Uploader.csproj
+++ b/HumphreyJ.NetCore.MKHX.GameData.Uploader/HumphreyJ.NetCore.MKHX.GameData.Uploader.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Properties\PublishProfiles\**" />
+    <EmbeddedResource Remove="Properties\PublishProfiles\**" />
+    <None Remove="Properties\PublishProfiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
@@ -24,6 +30,10 @@
     <None Update="Config.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
