--- a/HumphreyJ.NetCore.MKHX.SandBox/HumphreyJ.NetCore.MKHX.SandBox.csproj
+++ b/HumphreyJ.NetCore.MKHX.SandBox/HumphreyJ.NetCore.MKHX.SandBox.csproj
@@ -10,4 +10,8 @@
     <WarningsAsErrors />
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Walterlv.ComponentModel\Walterlv.ComponentModel.csproj" />
+  </ItemGroup>
+
 </Project>
