--- a/HumphreyJ.NetCore.MKHX.GameData.Uploader/HumphreyJ.NetCore.MKHX.GameData.Uploader.csproj
+++ b/HumphreyJ.NetCore.MKHX.GameData.Uploader/HumphreyJ.NetCore.MKHX.GameData.Uploader.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2-beta1" />
   </ItemGroup>
 
   <ItemGroup>
