--- a/HumphreyJ.NetCore.MKHX.GameData/HumphreyJ.NetCore.MKHX.GameData.csproj
+++ b/HumphreyJ.NetCore.MKHX.GameData/HumphreyJ.NetCore.MKHX.GameData.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2-beta1" />
   </ItemGroup>
 
 </Project>
