--- a/HumphreyJ.NetCore.MKHX.Web/HumphreyJ.NetCore.MKHX.Web.csproj
+++ b/HumphreyJ.NetCore.MKHX.Web/HumphreyJ.NetCore.MKHX.Web.csproj
@@ -27,9 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="bootstrap" Version="4.3.1" />
-    <PackageReference Include="FontAwesome" Version="4.7.0" />
-    <PackageReference Include="jQuery" Version="3.3.1" />
+    <!--<PackageReference Include="bootstrap" Version="4.3.1" />-->
+    <!--<PackageReference Include="FontAwesome" Version="4.7.0" />-->
+    <!--<PackageReference Include="jQuery" Version="3.3.1" />-->
     <PackageReference Include="Microsoft.AspNetCore.All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="Pinyin4net-core" Version="1.1.0" />
